# qjsonrpc

./: CMakeLists.txt  qjsonrpc.pro
src/: qjsonrpchttpclient.h  src.pro
src/http-parser/: http_parser.c
